# migration-testing-system

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
test/: alembic.ini  docker-compose.yml  dump.sql  pyproject.toml  requirements.txt  run_local_test.sh  run_tests.py
test/alembic/: env.py
test/alembic/versions/: 1f8a9d811105_first_auto_gen.py  4da06cae3a24_first_auto_gen.py  5e38e5884329_added_car_table.py  621337e4bcd7_added_phone_table.py
test/alembic/versions_check_nullable/: 2022_12_22_1255_5e38e5884320_added_car_table.py
test/alembic/versions_constraint_check_invalid/: 2022_12_22_1200-bf9ab3f3ab72_created_products.py  2022_12_22_1214-af34914e8892_created_products_check.py
test/alembic/versions_create_index/: 2022_12_22_1344-3895a1b87c1a_create_index.py
test/alembic/versions_foreign_keys/: 2022_12_22_1339-86aa9158e6e0_foreign_keys.py  2022_12_22_1543-fa2e550a531b_foreign_key_drop.py
test/alembic/versions_invalid/: 1_first_auto_gen.py  2_added_car_table.py  2f8a9d811105_added_car_table.py  3_added_phone_table.py  3f1499fa1105_added_phone_table.py
test/alembic/versions_primary_key/: 2022_12_22_1338-29bdb076c853_primary_key.py
test/alembic/versions_schema_drift/: 2e38e5884329_added_car_table.py  321337e4bcd7_added_phone_table.py
test/alembic/versions_unique_constraints/: 2022_12_22_1306-8db619964b80_unique_constraints.py
test/alembic/versions_unique_index/: 2022_12_22_1341-d15964e3a5ee_unique_index.py
test/dump_db/: dump_db.sh  dump_db_to_s3.sh  restore_db_from_s3.sh
test/test_project/: models.py
(+12 files in other folders)
