[tool.poetry]
authors = ["Stanislav <slubovsky@cinimex.ru>"]
description = ""
name = "migration-testing-system"
packages = [{include = "migration_testing_system"}]
version = "0.1.1"

[tool.poetry.dependencies]
SQLAlchemy = "^1.4.44"
alembic = "^1.8.1"
alembic-utils = "^0.7.8"
boto3 = "^1.26.17"
psycopg2-binary = "^2.9.5"
pydantic = "^1.10.2"
python = "^3.10"
configargparse = "^1.5.3"
sqlalchemy-diff="^0.1.0"
sqlalchemy_utils="^0.38.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
