[tool.poetry]
authors = ["Stanislav <slubovsky@cinimex.ru>"]
description = ""
name = "test-project"
packages = [{include = "test_project"}]
version = "0.1.0"

[tool.poetry.dependencies]
docker = "^6.0.1"
migration-testing-system = {path = ".."}
python = "^3.10"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
